assets/css/style.css
 html, body {
  margin: 0;
  padding: 0;
}

*{
  box-sizing: border-box;
}

.slider {
    width: 100%;
}

.slick-slide {
  /*margin: 0px 20px;*/
}

.slick-slide img {
  width: 100%;
}

.slick-prev:before,
.slick-next:before {
  color: black;
}


.slick-slide {
  transition: all ease-in-out .3s;
}

.slick-prev {
    left: 25px;
    z-index: 998;
}

.slick-next {
    right: 25px;
}

.container {
    width: 100%;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

.container-fluid {
    width: 100%;
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
}

section {
  padding-bottom: 15px;
}

/* Reset CSS */
body {
    margin: 0;
    font-weight: 400;
    line-height: 1.5;
    color: #212529;
    overflow-x: hidden;
}

img {
  width: 100%;
  height: 100%;
}

.no-gutters {
    margin-right: 0;
    margin-left: 0;
}
a {
    color: #007bff;
    text-decoration: none;
    background-color: transparent;
}

ul {
    margin-top: 0;
    margin-bottom: 1rem;
}

p {
  margin-top: 0;
}

.no-padding {
  padding-left: 0;
  padding-right: 0;
}

.mr-5 {
  margin-right: 5px;
}

.bg-gray {
  background-color: #f0efeb;
}

.bg-white {
  background-color: #ffffff !important;
  color: #4e4e4e !important;
}

.bg-dard-gray {
  background-color: #41403e !important;
}

.bg-top-dark, .bg-bottom-white {
  position: relative;
}

.bg-top-dark:before  {
  position: absolute;
  content: '';
  top: -18px;
  left: 0;
  right: 0;
  height: 20px;
  width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
}

.bg-bottom-white:after {
  position: absolute;
  content: '';
  bottom: 36px;
  left: 0;
  right: 0;
  height: 20px;
  width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
}

.bg-top-dark:before {
  background-image: url('../images/bg-top-dark.png');
}

.bg-bottom-white:after {
  background-image: url('../images/bg-top-white.png');
}


.border-dard-gray {
  border: 1px solid #41403e !important;
}

.mb-5 {
  margin-bottom: 5px !important;
}

.pd-50-70 {
  padding-top: 50px;
  padding-bottom: 70px;
}

.pd-70 {
  padding-top: 70px;
  padding-bottom: 70px;
}

.pd-70 {
  padding-top: 70px;
  padding-bottom: 70px;
}

.pd-20 {
  padding-top: 20px !important;
  padding-bottom: 18px !important;
}

.h-55 {
  height: 55px !important;
}

.text-center {
  text-align: center;
}
/* /Reset CSS */

.btn {
    display: inline-block;
    font-weight: 400;
    color: #212529;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: transparent;
    border: 1px solid transparent;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: .25rem;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
   border-color: lightgray;
}

.form-control {
    display: block;
    width: 100%;
    height: calc(1em + .75rem + 2px);
    padding: .1rem .75rem;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: .25rem;
    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.mr-auto, .mx-auto {
    margin-right: auto!important;
}

.bg-white {
  background-color: #ffffff
}

main {
  padding-bottom: 20px;
  padding-top: 60px;
}

h2.heading {
  font-size: 34px;
  font-weight: bold;
  text-transform: capitalize;
  display: flex;
  justify-content: center; 
  width: 100%;
  margin-top: 0;
}

h3.sub-heading {
  font-size: 20px;
  font-weight: normal;
  text-align: center;
}

@media (min-width: 576px) {
  .container {
      max-width: 540px;
  }
}


@media (min-width: 768px) {
  .container {
      max-width: 720px;
  }
}


@media (min-width: 992px) {
  .container {
      max-width: 960px;
  }
}

@media (min-width: 1200px) {  
  .container {
      width: 1170px;
      max-width: 100%;
  }
}


.row {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    margin-right: -15px;
    margin-left: -15px;
}

.col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-12 {
  position: relative;
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
}

.col-2 {
    -ms-flex: 0 0 16.666667%;
    flex: 0 0 16.666667%;
    max-width: 16.666667%;
}

.col-3 {
    -ms-flex: 0 0 25%;
    flex: 0 0 25%;
    max-width: 25%;
}
.col-4 {
  ms-flex: 0 0 33.333333%;
  flex: 0 0 33.333333%;
  max-width: 33.333333%;
}

.col-5 {
    -ms-flex: 0 0 41.666667%;
    flex: 0 0 41.666667%;
    max-width: 41.666667%;
}

.col-6 {
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
}

.col-7 {
    -ms-flex: 0 0 58.333333%;
    flex: 0 0 58.333333%;
    max-width: 58.333333%;
}

.col-8 {
    -ms-flex: 0 0 66.666667%;
    flex: 0 0 66.666667%;
    max-width: 66.666667%;
}

.col-9 {
    -ms-flex: 0 0 75%;
    flex: 0 0 75%;
    max-width: 75%;
}

.col-10 {
    -ms-flex: 0 0 83.333333%;
    flex: 0 0 83.333333%;
    max-width: 83.333333%;
}

.col-12 {
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 100%;
}

@media (max-width: 768px) {   
  .col-xs-12 {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
    max-width: 100%;
  }

  .col-xs-6 {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 50%;
    flex: 0 0 50%;
    max-width: 50%;
  }

  .col-xs-4 {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 33.3333%;
    flex: 0 0 33.3333%;
    max-width: 33.3333%;
  }

  .col-xs-3 {
    -webkit-box-flex: 0;
    -ms-flex: 0 0 25%;
    flex: 0 0 25%;
    max-width: 25%;
  }
}
/* ... */

